--- a/configs/nuscenes_omnire.yaml
+++ b/configs/nuscenes_omnire.yaml
@@ -1,13 +1,13 @@
 seed: 0
-dataset: waymo/3cams
+dataset: nuscenes/3cams
 
 # ------------- Trainer ------------ #
 trainer:
   type: models.trainers.MultiTrainer
   optim:
-    num_iters: 40000
+    num_iters: 30000
     use_grad_scaler: false
-    cache_buffer_freq: 2000 # we use error based image sampler for training with more than 3 cameras
+    cache_buffer_freq: -1 # if > 0, use error based image sampler for training
   render:
     near_plane: 0.1 # near plane for rendering
     far_plane: 10000000000.0 # far plane for rendering
@@ -51,20 +51,20 @@ trainer:
       lr: 0.001
   gaussian_ctrl_general_cfg:
     warmup_steps: 500             # warmup steps for alpha
-    reset_alpha_interval: 4000    # reset alpha every n steps
+    reset_alpha_interval: 3000    # reset alpha every n steps
     refine_interval: 100          # refine gaussians every n steps
     sh_degree_interval: 1000      # every n intervals turn on another sh degree
     n_split_samples: 2            # number of samples to split gaussians into
     # may differ in different models
     reset_alpha_value: 0.01       # reset alpha to this value
-    densify_grad_thresh: 0.0003   # above this grad, gaussians are densified
-    densify_size_thresh: 0.002    # below this size, gaussians are *duplicated*, otherwise split
+    densify_grad_thresh: 0.0005   # above this grad, gaussians are densified
+    densify_size_thresh: 0.003    # below this size, gaussians are *duplicated*, otherwise split
     cull_alpha_thresh: 0.005      # threshold of opacity for culling gaussians
     cull_scale_thresh: 0.5        # threshold of scale for culling gaussians
     cull_screen_size: 0.15        # if a gaussian is more than this percent of screen space, cull it
     split_screen_size: 0.05       # if a gaussian is more than this percent of screen space, split it
-    stop_screen_size_at: 5000     # stop culling/splitting at this step WRT screen size of gaussians
-    stop_split_at: 20000          # stop splitting at this step
+    stop_screen_size_at: 4000     # stop culling/splitting at this step WRT screen size of gaussians
+    stop_split_at: 15000          # stop splitting at this step
     sh_degree: 3                  # sh degree for gaussians
 
 # ------------- Model ------------ #
@@ -90,10 +90,9 @@ model:
       traj_length_thres: 1.0 # threshold of trajectory length for moving instances
     ctrl:
       cull_scale_thresh: 0.1
-      stop_screen_size_at: 40000
-      stop_split_at: 30000
+      stop_screen_size_at: 30000
+      stop_split_at: 20000
       cull_out_of_bound: true
-      densify_grad_thresh: 0.0002
     reg:
       sharp_shape_reg:
         w: 1.
@@ -127,12 +126,12 @@ model:
     ctrl:
       reset_alpha_value: 0.1
       cull_scale_thresh: 0.1
-      stop_screen_size_at: 40000
-      stop_split_at: 30000
+      stop_screen_size_at: 30000
+      stop_split_at: 20000
       sh_degree: 3
       cull_out_of_bound: false
       use_deformgs_for_nonrigid: True # default True
-      use_deformgs_after: 4000        # default 3000
+      use_deformgs_after: 3000        # default 3000
       stop_optimizing_canonical_xyz: True
     reg:
       sharp_shape_reg:
@@ -141,7 +140,7 @@ model:
         max_gauss_ratio: 10.
       out_of_bound_loss:
         w: 1.
-        stop_after: 40000
+        stop_after: 30000
       temporal_smooth_reg:
         trans:
           w: 0.01 # optimal value may vary
@@ -265,7 +264,7 @@ render:
   render_test: True # whether to render test set
   render_novel: 
     traj_types:
-      - front_center_interp # type of trajectory for novel view synthesis
+      - s_curve # type of trajectory for novel view synthesis
     fps: 24 # frames per second for novel view rendering
   vis_lidar: False # whether to visualize lidar points on ground truth images
   vis_sky: False # whether to include "rgb_sky" and "rgb_sky_blend" in rendered keys
@@ -275,5 +274,5 @@ render:
 logging:
   vis_freq: 2000 # how often to visualize training stats
   print_freq: 500 # how often to print training stats
-  saveckpt_freq: 20000 # how often to save checkpoints
+  saveckpt_freq: 15000 # how often to save checkpoints
   save_seperate_video: True # whether to save seperate videos for each scene
