--- a/configs/nuscenes_omnire_extended_cam.yaml
+++ b/configs/nuscenes_omnire_extended_cam.yaml
@@ -1,11 +1,10 @@
-seed: 0
-dataset: waymo/3cams
-
+seed: 0 
+dataset: nuscenes/6cams
 # ------------- Trainer ------------ #
 trainer:
   type: models.trainers.MultiTrainer
   optim:
-    num_iters: 40000
+    num_iters: 80000
     use_grad_scaler: false
     cache_buffer_freq: 2000 # we use error based image sampler for training with more than 3 cameras
   render:
@@ -265,7 +264,7 @@ render:
   render_test: True # whether to render test set
   render_novel: 
     traj_types:
-      - front_center_interp # type of trajectory for novel view synthesis
+      - s_curve # type of trajectory for novel view synthesis
     fps: 24 # frames per second for novel view rendering
   vis_lidar: False # whether to visualize lidar points on ground truth images
   vis_sky: False # whether to include "rgb_sky" and "rgb_sky_blend" in rendered keys
